..F....... [ZBX-18767] fixed word breaks in flexible text input fields and trigger expressions

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -3449,7 +3449,7 @@ $form-icon-btn: (
 	min-height: 24px;
 	overflow: hidden;
 	resize: none;
-	word-break: break-all;
+	word-break: break-word;
 	height: 24px;
 	line-height: 14px;
 	white-space: break-spaces;
